--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table align="center">
         
             <tr>
-                <td colspan="4"> <input type="text" name="result" placeholder="0" style="text-align:right"> </td>
+                <td colspan="4"> <input type="text" name="result" placeholder="Resultado" style="text-align:right"> </td>
             </tr>
         
             <tr>
